@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.radbox"
        name="Radbox"
-       version="0.0.9"
+       version="0.1.1"
        provider-name="Radbox Inc.">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
-    <import addon="plugin.video.youtube" version="2.1.3"/>
-    <import addon="plugin.video.vimeo" version="1.1.0" />
-    <import addon="plugin.video.collegehumor" version="0.0.2" />
     <import addon="script.module.beautifulsoup" version="3.0.8"/>
   </requires>
   <extension point="xbmc.python.pluginsource"
